fixed UI issues on Iphone SE and SonyXZ devices.

--- a/src/assets/scss/_pokemon.scss
+++ b/src/assets/scss/_pokemon.scss
@@ -33,11 +33,15 @@
     }
     @media (max-width: 360px) {
       .pokemon-video-player {
-        height: 250px;
+        height: 240px;
       }
     }
 
-
+    @media (max-width: 320px) {
+      .pokemon-video-player {
+        height: 210px;
+      }
+    }
 
     .card-title {
       h1 {
